<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditerSociete">
    <TextView
        android:id="@+id/t1"
        style="@style/titre"
        android:text="@string/btnedit"></TextView>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/t1"
        android:id="@+id/sp">

    </Spinner>

    <EditText
        android:id="@+id/ed1"
        style="@style/Button"
        android:layout_below="@+id/sp"
        android:hint="@string/hinted1">

    </EditText>
    <EditText
        android:id="@+id/ed2"
        style="@style/Button"
        android:layout_below="@+id/ed1"
        android:hint="@string/hinted2">

    </EditText>
    <EditText
        android:id="@+id/ed3"
        style="@style/Button"
        android:layout_below="@+id/ed2"
        android:hint="@string/hinted3">

    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/editesoc"
        android:onClick="modifier"
        android:id="@id/btn1"
        android:layout_below="@id/ed3">
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/suppedit"
        android:layout_below="@id/ed3"
        android:layout_alignParentEnd="true"
        android:id="@+id/btn2"
        android:onClick="supprime">
    </Button>

</RelativeLayout>